src/objects/LicenseDetail__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <label>Account Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_hoc_Email_Ids__c</fullName>
        <inlineHelpText>These users will get the License Emails. They will not get the access to Support System.</inlineHelpText>
        <label>Additional Recipients</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Contacts__c</fullName>
        <label>Additional Contacts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agents__c</fullName>
        <formula>Net_Agents__c + Machine_Agents__c + Server_Agents__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>#Agents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BackendStatus__c</fullName>
        <label>BackendStatus</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Backend_Submit_Status__c</fullName>
        <label>Backend_Submit_Status</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Controller_ID__c</fullName>
        <label>Controller ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controller_Name__c</fullName>
        <label>Controller Name</label>
        <picklist>
            <picklistValues>
                <fullName>TBD1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD2</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Controller_URL__c</fullName>
        <label>Controller URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coradiant_Integration_URL__c</fullName>
        <label>Coradiant Integration URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Custom_URL_Name__c</fullName>
        <label>Customer SaaS URL</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Database_Agents_Rollup__c</fullName>
        <label>Database Agents</label>
        <summarizedField>License_Agent__c.Count__c</summarizedField>
        <summaryFilterItems>
            <field>License_Agent__c.Agent_Type__c</field>
            <operation>equals</operation>
            <value>Database</value>
        </summaryFilterItems>
        <summaryForeignKey>License_Agent__c.License__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dedicated_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Text box showing that a customer has over 200 active agents on their account</description>
        <label>Dedicated User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FailoverBackup__c</fullName>
        <label>FailoverBackup</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FailoverValue__c</fullName>
        <label>BackendStatus</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HA_Source_License__c</fullName>
        <label>HA Source License</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_EUM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BMC Integration?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_HA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is HA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Permanent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Permanent ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Perpetual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Perpetual ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Split__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Split?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Java_Agents_Rollup__c</fullName>
        <label>Java Agents</label>
        <summarizedField>License_Agent__c.Count__c</summarizedField>
        <summaryFilterItems>
            <field>License_Agent__c.Agent_Type__c</field>
            <operation>equals</operation>
            <value>Java</value>
        </summaryFilterItems>
        <summaryForeignKey>License_Agent__c.License__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LastOpcode__c</fullName>
        <label>Last Opcode</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_License_User__c</fullName>
        <description>Indicates User Id used for last license operation</description>
        <label>Last License User</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LicenseData__c</fullName>
        <label>License Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_BackendID__c</fullName>
        <label>License_BackendID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Expiry_Date__c</fullName>
        <label>License Expiration Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Length__c</fullName>
        <description>Finds the amount of days between creation and expiration of the License</description>
        <formula>License_Expiry_Date__c-DATEVALUE( CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Time__c</fullName>
        <description>Indicates Last License Generation time. This field is to be used in association with Last Opcode field which indicates what is last license generation operation</description>
        <label>License Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MAC_Address__c</fullName>
        <description>MAC Address of the machine to be registered with license</description>
        <label>MAC Address</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Agents_Rollup__c</fullName>
        <label>Additional Machine Agents</label>
        <summarizedField>License_Agent__c.Count__c</summarizedField>
        <summaryFilterItems>
            <field>License_Agent__c.Agent_Type__c</field>
            <operation>equals</operation>
            <value>Machine</value>
        </summaryFilterItems>
        <summaryForeignKey>License_Agent__c.License__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Machine_Agents__c</fullName>
        <label>Additional Machine Agents Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manual_SaaS_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual SaaS Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Agents_Rollup__c</fullName>
        <label>.Net Agents</label>
        <summarizedField>License_Agent__c.Count__c</summarizedField>
        <summaryFilterItems>
            <field>License_Agent__c.Agent_Type__c</field>
            <operation>equals</operation>
            <value>.Net</value>
        </summaryFilterItems>
        <summaryForeignKey>License_Agent__c.License__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Net_Agents__c</fullName>
        <label>.Net Agents Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NodeJs_Agents_Rollup__c</fullName>
        <label>NodeJs Agents</label>
        <summarizedField>License_Agent__c.Count__c</summarizedField>
        <summaryFilterItems>
            <field>License_Agent__c.Agent_Type__c</field>
            <operation>equals</operation>
            <value>NodeJs</value>
        </summaryFilterItems>
        <summaryForeignKey>License_Agent__c.License__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PHP_Agents_Rollup__c</fullName>
        <label>PHP Agents</label>
        <summarizedField>License_Agent__c.Count__c</summarizedField>
        <summaryFilterItems>
            <field>License_Agent__c.Agent_Type__c</field>
            <operation>equals</operation>
            <value>PHP</value>
        </summaryFilterItems>
        <summaryForeignKey>License_Agent__c.License__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PrimaryContactRollup__c</fullName>
        <label>PrimaryContactRollup</label>
        <summaryFilterItems>
            <field>License_Contacts__c.Contact_Type__c</field>
            <operation>equals</operation>
            <value>PRIMARY</value>
        </summaryFilterItems>
        <summaryForeignKey>License_Contacts__c.License__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <label>Primary Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessState__c</fullName>
        <label>Last Transaction Result</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAILED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Deployment Option</label>
        <picklist>
            <picklistValues>
                <fullName>On-Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosted (SaaS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosted (SaaS Lite)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Python_Agents_Rollup__c</fullName>
        <label>Python Agents Rollup</label>
        <summarizedField>License_Agent__c.Count__c</summarizedField>
        <summaryFilterItems>
            <field>License_Agent__c.Agent_Type__c</field>
            <operation>equals</operation>
            <value>Python</value>
        </summaryFilterItems>
        <summaryForeignKey>License_Agent__c.License__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RUM_Access_Key__c</fullName>
        <label>RUM Access Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RUM_Account_Name__c</fullName>
        <inlineHelpText>Account Name registered with RUM Cloud</inlineHelpText>
        <label>RUM Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RUM_Action__c</fullName>
        <label>EUM Action</label>
        <picklist>
            <picklistValues>
                <fullName>create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>enable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>disable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RUM_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Real User Monitoring?</description>
        <inlineHelpText>Enable Real User Monitoring?</inlineHelpText>
        <label>RUM Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RUM_State__c</fullName>
        <label>EUM State</label>
        <picklist>
            <picklistValues>
                <fullName>ON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISABLED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENABLED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAAS_UserName__c</fullName>
        <label>SaaS User Name</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SaaS_Access_Key__c</fullName>
        <label>SaaS Access Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SaaS_Account__c</fullName>
        <label>SaaS Account</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SaaS_Password__c</fullName>
        <label>SaaS Password</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server_Agents__c</fullName>
        <label>Java Agents Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Split_License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Split License</label>
        <referenceTo>LicenseDetail__c</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>TRIAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRIAL EXPIRED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAID EXPIRED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISABLED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Owner__c</fullName>
        <label>Technical Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pro_Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRO_PAID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isMigrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMigrated</label>
        <type>Checkbox</type>
    </fields>
    <label>License</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Licenses</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>License_Expiry_Date__c</columns>
        <columns>Custom_URL_Name__c</columns>
        <columns>MAC_Address__c</columns>
        <columns>License_BackendID__c</columns>
        <columns>Stage__c</columns>
        <columns>Transaction_ID__c</columns>
        <columns>Last_License_User__c</columns>
        <columns>LastOpcode__c</columns>
        <columns>License_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>Licenses</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Licenses_Custom</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>License_Expiry_Date__c</columns>
        <columns>Custom_URL_Name__c</columns>
        <columns>MAC_Address__c</columns>
        <columns>License_BackendID__c</columns>
        <columns>Stage__c</columns>
        <columns>Transaction_ID__c</columns>
        <columns>Last_License_User__c</columns>
        <columns>LastOpcode__c</columns>
        <columns>License_Time__c</columns>
        <columns>Java_Agents_Rollup__c</columns>
        <columns>BackendStatus__c</columns>
        <columns>FailoverValue__c</columns>
        <columns>Product_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Licenses-Custom</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Licenses_Custom1</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>License_Expiry_Date__c</columns>
        <columns>Custom_URL_Name__c</columns>
        <columns>MAC_Address__c</columns>
        <columns>License_BackendID__c</columns>
        <columns>Stage__c</columns>
        <columns>Transaction_ID__c</columns>
        <columns>Last_License_User__c</columns>
        <columns>LastOpcode__c</columns>
        <columns>License_Time__c</columns>
        <columns>Java_Agents_Rollup__c</columns>
        <columns>BackendStatus__c</columns>
        <columns>FailoverValue__c</columns>
        <columns>Product_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Custom_URL_Name__c</field>
            <operation>contains</operation>
            <value>AutomaticDataProcessing7</value>
        </filters>
        <label>Licenses-Custom</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Licenses_With_None_Mac_Address</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>License_Expiry_Date__c</columns>
        <columns>Custom_URL_Name__c</columns>
        <columns>MAC_Address__c</columns>
        <columns>License_BackendID__c</columns>
        <columns>Stage__c</columns>
        <columns>Transaction_ID__c</columns>
        <columns>Last_License_User__c</columns>
        <columns>LastOpcode__c</columns>
        <columns>License_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MAC_Address__c</field>
            <operation>equals</operation>
            <value>None</value>
        </filters>
        <label>Licenses With None Mac Address</label>
    </listViews>
    <nameField>
        <label>License</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Java_NET_Addtional_agents_not_blank</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISBLANK( Net_Agents__c ),
ISBLANK( Server_Agents__c),
ISBLANK( Machine_Agents__c )
)</errorConditionFormula>
        <errorMessage>On of Java , .NET or Additional Machine Agents should be specified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>License_Expiry_Date_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
   OR( 
ISPICKVAL( Stage__c , &apos;TRIAL&apos;) ,
ISPICKVAL( Stage__c , &apos;PAID&apos;)
),
License_Expiry_Date__c  &lt;  TODAY()
)</errorConditionFormula>
        <errorDisplayField>License_Expiry_Date__c</errorDisplayField>
        <errorMessage>Please select a date greater than today&apos;s date for License Expiry</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Saas_URL_Required_for_Saas_product_type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
CONTAINS(TEXT( Product_Type__c ),&apos;Hosted&apos;),
ISBLANK( Custom_URL_Name__c )
)</errorConditionFormula>
        <errorDisplayField>Custom_URL_Name__c</errorDisplayField>
        <errorMessage>You have chosen a hosted deployment option. Customer Saas URL prefix cannot be blank</errorMessage>
    </validationRules>
</CustomObject>